--- a/main.html
+++ b/main.html
@@ -2,79 +2,117 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Smart Burme - Main Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Smart Burme - Main</title>
   <style>
-    body {
+    * {
       margin: 0;
       padding: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(-45deg, #000, #1a1a1a, #000, #1a1a1a);
-      background-size: 400% 400%;
-      animation: backgroundAnim 10s ease infinite;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
+      box-sizing: border-box;
     }
 
-    @keyframes backgroundAnim {
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(-45deg, #000000, #1a1a1a, #262626, #000000);
+      background-size: 400% 400%;
+      animation: backgroundShift 15s ease infinite;
+      color: white;
+      overflow: hidden;
+    }
+
+    @keyframes backgroundShift {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
 
-    h1 {
-      font-size: 42px;
-      font-weight: bold;
-      animation: float3D 3s ease-in-out infinite, colorShift 3s ease-in-out infinite;
+    .video-container {
+      position: relative;
+      width: 100%;
+      height: 100vh;
+      overflow: hidden;
     }
 
-    @keyframes float3D {
-      0% { transform: rotateY(0deg) translateY(0); }
-      25% { transform: rotateY(15deg) translateY(-10px); }
-      50% { transform: rotateY(0deg) translateY(0); }
-      75% { transform: rotateY(-15deg) translateY(10px); }
-      100% { transform: rotateY(0deg) translateY(0); }
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
-    @keyframes colorShift {
-      0% { color: #ccc; }
-      50% { color: #7ec8e3; }
-      100% { color: #ccc; }
+    .overlay-controls {
+      position: absolute;
+      bottom: 20px;
+      left: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
     }
 
     .btn {
-      margin: 10px 0;
-      padding: 14px 28px;
-      font-size: 18px;
-      color: white;
       background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
       background-size: 200% auto;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 10px;
+      font-size: 16px;
+      font-weight: bold;
       border: none;
-      border-radius: 8px;
-      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
       cursor: pointer;
-      transition: background-position 0.5s ease, transform 0.3s ease;
-      text-decoration: none;
-      display: inline-block;
-      width: 270px;
-      text-align: center;
+      animation: float3D 4s ease-in-out infinite, colorPulse 4s ease-in-out infinite;
+      box-shadow: 0 0 10px rgba(0, 204, 255, 0.3);
     }
 
     .btn:hover {
-      background-position: right center;
       transform: scale(1.05);
     }
+
+    @keyframes float3D {
+      0% { transform: translateY(0px); }
+      50% { transform: translateY(-10px); }
+      100% { transform: translateY(0px); }
+    }
+
+    @keyframes colorPulse {
+      0% { background-position: 0% center; }
+      50% { background-position: 100% center; }
+      100% { background-position: 0% center; }
+    }
+
+    .title {
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 28px;
+      font-weight: bold;
+      text-shadow: 0 0 10px rgba(0, 204, 255, 0.6);
+    }
+
   </style>
 </head>
 <body>
+  <div class="video-container">
+    <video autoplay muted loop>
+      <source src="your-video.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
 
-  <h1>Welcome to Smart Burme</h1>
+    <div class="title">Smart Burme Party System</div>
 
-  <a href="body.html" class="btn">Go to Body</a>
+    <div class="overlay-controls">
+      <button class="btn" onclick="goToPrivateChat()">One-on-One Voice Chat</button>
+      <button class="btn" onclick="goToGroupParty()">Group Voice Party</button>
+    </div>
+  </div>
 
+  <script>
+    function goToPrivateChat() {
+      window.location.href = "private_chat.html";
+    }
+
+    function goToGroupParty() {
+      window.location.href = "group_party.html";
+    }
+  </script>
 </body>
 </html>
