--- a/login.html
+++ b/login.html
@@ -3,26 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title> Login </title>
+  <title>Smart Burme - Login</title>
   <style>
-    * {
+    body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
+      font-family: 'Segoe UI', sans-serif;
       background: linear-gradient(-45deg, #0d0d0d, #1a1a1a, #000000, #262626);
       background-size: 400% 400%;
-      animation: backgroundShift 12s ease infinite;
-      font-family: 'Segoe UI', sans-serif;
+      animation: backgroundShift 10s ease infinite;
       color: white;
-      height: 100vh;
-      overflow: hidden;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
+      height: 100vh;
+      flex-direction: column;
     }
 
     @keyframes backgroundShift {
@@ -31,12 +26,13 @@
       100% { background-position: 0% 50%; }
     }
 
-    .floating-title {
-      font-size: 60px;
-      font-weight: bold;
-      animation: float3D 4s ease-in-out infinite, colorChange 6s infinite alternate;
+    .login-container {
       text-align: center;
-      margin-bottom: 20px;
+    }
+
+    h1 {
+      font-size: 48px;
+      animation: float3D 4s ease-in-out infinite;
     }
 
     @keyframes float3D {
@@ -47,104 +43,55 @@
       100% { transform: rotateY(0deg) translateY(0); }
     }
 
-    @keyframes colorChange {
-      0% { color: #a0a0a0; }
-      50% { color: #00ccff; }
-      100% { color: #cccccc; }
+    input, button {
+      padding: 10px;
+      margin: 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: none;
+      width: 250px;
     }
 
-    .form-container {
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 15px;
-    }
-
-    .input-field {
-      padding: 15px;
-      font-size: 18px;
-      border-radius: 10px;
-      border: 1px solid #333;
-      width: 300px;
-      margin-top: 10px;
-      color: white;
-      background-color: #444;
-    }
-
-    .btn {
+    button {
       background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
       background-size: 200% auto;
       color: white;
-      padding: 15px 30px;
-      border-radius: 10px;
-      font-size: 18px;
       font-weight: bold;
-      text-decoration: none;
-      text-align: center;
-      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
-      transition: background-position 0.5s ease, transform 0.3s;
+      cursor: pointer;
+      transition: 0.3s;
     }
 
-    .btn:hover {
+    button:hover {
       background-position: right center;
       transform: scale(1.05);
     }
+
+    .links {
+      margin-top: 15px;
+    }
+
+    .links a {
+      color: #66ccff;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+
   </style>
 </head>
 <body>
+  <div class="login-container">
+    <h1>Login</h1>
+    <input type="email" id="email" placeholder="Email"><br>
+    <input type="password" id="password" placeholder="Password"><br>
+    <button onclick="login()">Login</button>
 
-  <div class="floating-title"> Login </div>
-
-  <div class="form-container">
-    <input type="email" id="email" class="input-field" placeholder="Email" required />
-    <input type="password" id="password" class="input-field" placeholder="Password" required />
-    <button class="btn" id="loginButton">Login</button>
-    <p><a href="registration.html" class="btn">New Account? Register here</a></p>
+    <div class="links">
+      <a href="registration.html">New Account</a> |
+      <a href="forget_password.html">Forgot Password?</a>
+    </div>
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
-  <script>
-    // Firebase Configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
-      authDomain: "smart-burme-app.firebaseapp.com",
-      projectId: "smart-burme-app",
-      storageBucket: "smart-burme-app.appspot.com",
-      messagingSenderId: "851502425686",
-      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
-    };
-
-    // Initialize Firebase
-    const app = firebase.initializeApp(firebaseConfig);
-    const auth = firebase.getAuth(app);
-
-    // Login button event listener
-    document.getElementById('loginButton').addEventListener('click', () => {
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
-
-      if (email && password) {
-        firebase.signInWithEmailAndPassword(auth, email, password)
-          .then((userCredential) => {
-            const user = userCredential.user;
-            alert("Login successful!");
-            window.location.href = "main.html"; // Redirect to main page
-          })
-          .catch((error) => {
-            const errorCode = error.code;
-            const errorMessage = error.message;
-            alert(`Error: ${errorMessage}`);
-          });
-      } else {
-        alert("Please enter email and password.");
-      }
-    });
-  </script>
-
+  <!-- Firebase SDK + auth.js -->
+  <script type="module" src="auth.js"></script>
 </body>
 </html>
