--- a/login.html
+++ b/login.html
@@ -2,22 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Burme - Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login - Smart Burme</title>
   <style>
-    body {
+    /* General Styles */
+    * {
       margin: 0;
       padding: 0;
-      font-family: 'Segoe UI', sans-serif;
+      box-sizing: border-box;
+    }
+
+    body {
       background: linear-gradient(-45deg, #0d0d0d, #1a1a1a, #000000, #262626);
       background-size: 400% 400%;
-      animation: backgroundShift 10s ease infinite;
+      animation: backgroundShift 12s ease infinite;
+      font-family: 'Segoe UI', sans-serif;
       color: white;
+      height: 100vh;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      flex-direction: column;
+      overflow: hidden;
     }
 
     @keyframes backgroundShift {
@@ -26,13 +32,13 @@
       100% { background-position: 0% 50%; }
     }
 
-    .login-container {
+    /* Floating Animation for Title */
+    .floating-title {
+      font-size: 60px;
+      font-weight: bold;
       text-align: center;
-    }
-
-    h1 {
-      font-size: 48px;
-      animation: float3D 4s ease-in-out infinite;
+      margin-bottom: 20px;
+      animation: float3D 4s ease-in-out infinite, colorChange 6s infinite alternate;
     }
 
     @keyframes float3D {
@@ -43,22 +49,50 @@
       100% { transform: rotateY(0deg) translateY(0); }
     }
 
-    input, button {
+    @keyframes colorChange {
+      0% { color: #a0a0a0; }
+      50% { color: #00ccff; }
+      100% { color: #cccccc; }
+    }
+
+    /* Login Form Styles */
+    .login-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      opacity: 0;
+      animation: fadeIn 2s ease-out forwards;
+      animation-delay: 1s;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    input {
+      margin: 10px 0;
       padding: 10px;
-      margin: 10px;
       font-size: 16px;
+      width: 300px;
       border-radius: 5px;
-      border: none;
-      width: 250px;
+      border: 1px solid #ccc;
     }
 
     button {
       background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
       background-size: 200% auto;
       color: white;
+      padding: 15px 30px;
+      border-radius: 10px;
+      text-decoration: none;
+      font-size: 18px;
       font-weight: bold;
+      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
+      transition: background-position 0.5s, transform 0.3s;
+      width: 300px;
       cursor: pointer;
-      transition: 0.3s;
     }
 
     button:hover {
@@ -67,31 +101,74 @@
     }
 
     .links {
-      margin-top: 15px;
+      margin-top: 20px;
+      text-align: center;
     }
 
     .links a {
-      color: #66ccff;
+      color: #00d4ff;
+      font-size: 16px;
       text-decoration: none;
       margin: 0 10px;
     }
 
+    .links a:hover {
+      text-decoration: underline;
+    }
+
+    /* Loader Style */
+    #loader {
+      font-size: 20px;
+      color: #aaa;
+    }
   </style>
 </head>
 <body>
-  <div class="login-container">
-    <h1>Login</h1>
-    <input type="email" id="email" placeholder="Email"><br>
-    <input type="password" id="password" placeholder="Password"><br>
-    <button onclick="login()">Login</button>
 
+  <div id="loader">Loading Smart Burme App...</div>
+
+  <div class="login-container" id="main-content">
+    <div class="floating-title">Smart Burme</div>
+    <form id="login-form" onsubmit="event.preventDefault(); login();">
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <button type="submit">Login</button>
+    </form>
     <div class="links">
-      <a href="registration.html">New Account</a> |
+      <a href="registration.html">Create New Account</a>
       <a href="forget_password.html">Forgot Password?</a>
     </div>
   </div>
 
-  <!-- Firebase SDK + auth.js -->
-  <script type="module" src="auth.js"></script>
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
+  <script src="firebase-config.js"></script>
+  <script src="auth.js"></script>
+
+  <script>
+    // Show Main Content after 3 seconds loading
+    setTimeout(() => {
+      document.getElementById('loader').style.display = 'none';
+      document.getElementById('main-content').style.display = 'flex';
+    }, 3000);
+
+    // Firebase login logic
+    function login() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+
+      signInWithEmailAndPassword(auth, email, password)
+        .then((userCredential) => {
+          window.location.href = "main.html"; // Redirect to main page after successful login
+        })
+        .catch((error) => {
+          const errorCode = error.code;
+          const errorMessage = error.message;
+          alert("Login failed: " + errorMessage);
+        });
+    }
+  </script>
+
 </body>
 </html>
