--- a/main.html
+++ b/main.html
@@ -3,84 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Burme AI</title>
+  <title>Text to Image Generator</title>
   <link rel="stylesheet" href="main.css" />
 </head>
 <body>
-  <header>
-    <button class="menu-toggle" aria-label="Toggle menu" id="menuToggleBtn">☰</button>
-    <img src="icon.png" alt="Logo" class="logo">
-    <h1>Smart Burme AI</h1>
-  </header>
-
-  <nav class="slide-menu" id="slideMenu">
-    <ul>
-      <li><a href="#">ပင်မ</a></li>
-      <li><a href="#">AI ဖြင့် ရုပ်ပုံဖန်တီးရန်</a></li>
-      <li><a href="#">ကျွန်ုပ်အကြောင်း</a></li>
-    </ul>
-  </nav>
-
-  <main>
-    <div class="tab-container">
-      <div class="tab selected" id="tabTextImage">စာမှ ရုပ်ပုံဖန်တီးရန်</div>
-      <div class="tab" id="tabAbout">ကျွန်ုပ်အကြောင်း</div>
-    </div>
-
-    <div class="panel active" id="panelTextImage">
-      <div class="form-container">
-        <textarea id="promptText" placeholder="မိမိလိုချင်သော ရုပ်ပုံအကြောင်းအရာကို ရေးပါ..."></textarea>
-        <button id="generateBtn">ဖန်တီးမည်</button>
-      </div>
-
-      <div id="loading" class="loading">ဖန်တီးနေသည်...</div>
-      <div id="imageContainer" class="image-container"></div>
-    </div>
-
-    <div class="panel" id="panelAbout">
-      <p>Smart Burme AI သည် Gemini API နှင့် Firebase ကိုအသုံးပြု၍ စာမှရုပ်ပုံဖန်တီးခြင်း၊ အမြန်တုံ့ပြန်မှုများ၊ အသုံးပြုရလွယ်ကူသော မိုဘိုင်းနှင့် web-friendly interface တို့ဖြင့် တီထွင်ထားသော AI ဝက်ဘ်ဆိုဒ်ဖြစ်သည်။</p>
-    </div>
-  </main>
-
-  <footer>
-    <input type="file" accept="image/*" id="uploadInput" hidden />
-    <button id="uploadBtn">ဓာတ်ပုံတင်မည်</button>
-  </footer>
+  <div class="container">
+    <h1>Text to Image Generator (Gemini)</h1>
+    <textarea id="prompt" placeholder="စာသားထည့်ပါ..."></textarea>
+    <button id="generateBtn">Generate</button>
+    <div id="loading">Generating image...</div>
+    <div id="imageContainer"></div>
+  </div>
 
   <script>
-    const menuToggleBtn = document.getElementById("menuToggleBtn");
-    const slideMenu = document.getElementById("slideMenu");
-    const tabTextImage = document.getElementById("tabTextImage");
-    const tabAbout = document.getElementById("tabAbout");
-    const panelTextImage = document.getElementById("panelTextImage");
-    const panelAbout = document.getElementById("panelAbout");
+    const promptText = document.getElementById("prompt");
     const generateBtn = document.getElementById("generateBtn");
-    const promptText = document.getElementById("promptText");
-    const imageContainer = document.getElementById("imageContainer");
     const loading = document.getElementById("loading");
-
-    menuToggleBtn.addEventListener("click", () => {
-      slideMenu.classList.toggle("active");
-    });
-
-    tabTextImage.addEventListener("click", () => {
-      tabTextImage.classList.add("selected");
-      tabAbout.classList.remove("selected");
-      panelTextImage.classList.add("active");
-      panelAbout.classList.remove("active");
-    });
-
-    tabAbout.addEventListener("click", () => {
-      tabAbout.classList.add("selected");
-      tabTextImage.classList.remove("selected");
-      panelAbout.classList.add("active");
-      panelTextImage.classList.remove("active");
-    });
+    const imageContainer = document.getElementById("imageContainer");
 
     generateBtn.addEventListener("click", async () => {
       const prompt = promptText.value.trim();
       if (!prompt) {
-        alert("ကျေးဇူးပြု၍ စာသားထည့်ပါ။");
+        alert("ကျေးဇူးပြု၍ စာသားထည့်ပါ");
         return;
       }
 
@@ -88,32 +32,35 @@
       imageContainer.innerHTML = "";
 
       try {
-        // Gemini API ထည့်မည့်နေရာ
-        await new Promise((resolve) => setTimeout(resolve, 2000)); // simulate loading
+        const response = await fetch(
+          "https://generativelanguage.googleapis.com/v1beta/models/gemini-pro-vision:generateContent?key=AIzaSyChZ-yBEIX_y-M8evNg1wrq85ByBAACoNU",
+          {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+              contents: [{ parts: [{ text: prompt }] }]
+            }),
+          }
+        );
 
-        const img = document.createElement("img");
-        img.src = "https://placekitten.com/400/300"; // Dummy image
-        img.alt = "AI generated image";
-        imageContainer.appendChild(img);
+        const result = await response.json();
+        const parts = result.candidates?.[0]?.content?.parts || [];
+
+        // Find base64 image part
+        const imagePart = parts.find(p => p.inlineData?.mimeType?.startsWith("image/"));
+        if (imagePart) {
+          const img = document.createElement("img");
+          img.src = `data:${imagePart.inlineData.mimeType};base64,${imagePart.inlineData.data}`;
+          img.alt = "Generated Image";
+          imageContainer.appendChild(img);
+        } else {
+          alert("ပုံမထွက်ပါ။ ထပ်မံကြိုးစားပါ။");
+        }
       } catch (err) {
         console.error(err);
-        alert("ပြဿနာတက်နေပါသည်။");
+        alert("အမှားတစ်ခုဖြစ်ပွားခဲ့သည်။");
       } finally {
         loading.style.display = "none";
-      }
-    });
-
-    const uploadBtn = document.getElementById("uploadBtn");
-    const uploadInput = document.getElementById("uploadInput");
-    uploadBtn.addEventListener("click", () => {
-      uploadInput.click();
-    });
-
-    uploadInput.addEventListener("change", (e) => {
-      const file = e.target.files[0];
-      if (file) {
-        alert(`ဖိုင် ${file.name} ကိုတင်မည်`);
-        // Firebase Storage upload နေရာ
       }
     });
   </script>
