--- a/main.html
+++ b/main.html
@@ -3,64 +3,64 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Text to Image Generator</title>
+  <title>Smart Burme AI</title>
   <link rel="stylesheet" href="main.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>Text to Image Generator (Gemini)</h1>
-    <textarea id="prompt" placeholder="စာသားထည့်ပါ..."></textarea>
-    <button id="generateBtn">Generate</button>
-    <div id="loading">Generating image...</div>
-    <div id="imageContainer"></div>
-  </div>
+  <header>
+    <h1>Smart Burme AI</h1>
+  </header>
+
+  <main>
+    <div class="tabs">
+      <button id="textMode" class="active">စာရေးပေးရန်</button>
+      <button id="imageMode">ပုံဖန်တီးရန်</button>
+    </div>
+
+    <textarea id="prompt" placeholder="Run the baby in rain"></textarea>
+    <button id="generateBtn">ဖန်တီးမည်</button>
+
+    <div id="result">
+      <img id="resultImage" alt="AI generated image" />
+      <p id="resultText"></p>
+    </div>
+  </main>
+
+  <footer>
+    <button>ဆက်ဖတ်မည်</button>
+  </footer>
 
   <script>
-    const promptText = document.getElementById("prompt");
+    const apiKey = "🔑 မင်း restrict လုပ်ထားတဲ့ Gemini API key ထည့်ပါ";
+
     const generateBtn = document.getElementById("generateBtn");
-    const loading = document.getElementById("loading");
-    const imageContainer = document.getElementById("imageContainer");
+    const promptInput = document.getElementById("prompt");
+    const resultImage = document.getElementById("resultImage");
+    const resultText = document.getElementById("resultText");
 
     generateBtn.addEventListener("click", async () => {
-      const prompt = promptText.value.trim();
-      if (!prompt) {
-        alert("ကျေးဇူးပြု၍ စာသားထည့်ပါ");
-        return;
-      }
+      const prompt = promptInput.value.trim();
+      if (!prompt) return;
 
-      loading.style.display = "block";
-      imageContainer.innerHTML = "";
+      resultImage.src = "";
+      resultText.textContent = "Loading...";
 
-      try {
-        const response = await fetch(
-          "https://generativelanguage.googleapis.com/v1beta/models/gemini-pro-vision:generateContent?key=AIzaSyChZ-yBEIX_y-M8evNg1wrq85ByBAACoNU",
-          {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-              contents: [{ parts: [{ text: prompt }] }]
-            }),
-          }
-        );
+      const res = await fetch("https://generativelanguage.googleapis.com/v1beta/models/gemini-pro-vision:generateContent?key=" + apiKey, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          contents: [{ parts: [{ text: prompt }] }]
+        })
+      });
 
-        const result = await response.json();
-        const parts = result.candidates?.[0]?.content?.parts || [];
+      const data = await res.json();
+      const base64 = data.candidates?.[0]?.content?.parts?.[0]?.inlineData?.data;
 
-        // Find base64 image part
-        const imagePart = parts.find(p => p.inlineData?.mimeType?.startsWith("image/"));
-        if (imagePart) {
-          const img = document.createElement("img");
-          img.src = `data:${imagePart.inlineData.mimeType};base64,${imagePart.inlineData.data}`;
-          img.alt = "Generated Image";
-          imageContainer.appendChild(img);
-        } else {
-          alert("ပုံမထွက်ပါ။ ထပ်မံကြိုးစားပါ။");
-        }
-      } catch (err) {
-        console.error(err);
-        alert("အမှားတစ်ခုဖြစ်ပွားခဲ့သည်။");
-      } finally {
-        loading.style.display = "none";
+      if (base64) {
+        resultImage.src = "data:image/png;base64," + base64;
+        resultText.textContent = "";
+      } else {
+        resultText.textContent = "ပုံမရနိုင်ပါ။ ပြန်စမ်းကြည့်ပါ။";
       }
     });
   </script>
