--- a/burme-vpn/index.html
+++ b/burme-vpn/index.html
@@ -36,10 +36,10 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="burme-vpn/index.css">
 </head>
 <body class="bg-brand-dark-bg text-brand-text">
   <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
+  <script type="module" src="burme-vpn/index.tsx"></script>
 </body>
 </html>
