--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: url('background/anime-boy.jpg') no-repeat center center/cover;
+      background: skyblue;
       font-family: 'Segoe UI', sans-serif;
     }
 
@@ -64,6 +64,13 @@
       color: #00ffff;
       font-size: 22px;
     }
+
+    .link {
+      color: #00ffff;
+      text-decoration: underline;
+      cursor: pointer;
+      font-size: 13px;
+    }
   </style>
 </head>
 <body>
@@ -74,6 +81,7 @@
   <input type="password" id="password" placeholder="Password">
   <button onclick="signIn()">Sign In</button>
   <button onclick="goToRegister()">Register</button>
+  <p class="link" onclick="goToReset()">Forgot Password?</p>
 </div>
 
 <!-- Firebase SDK -->
@@ -98,20 +106,24 @@
     const password = document.getElementById('password').value;
 
     auth.signInWithEmailAndPassword(email, password)
-      .then((userCredential) => {
+      .then(() => {
         alert("Login successful!");
-        window.location.href = "burme-ai.html";
+        window.location.href = "mainchat.html";
       })
-      .catch((error) => {
-        alert("Wrong password or user not found. Redirecting to forgot page...");
+      .catch(() => {
+        alert("Login failed. Redirecting to reset...");
         setTimeout(() => {
-          window.location.href = "forget-password.html";
-        }, 2000);
+          window.location.href = "reset.html";
+        }, 1500);
       });
   }
 
   function goToRegister() {
-    window.location.href = "registration.html";
+    window.location.href = "register.html";
+  }
+
+  function goToReset() {
+    window.location.href = "reset.html";
   }
 </script>
 
